<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profileTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/nameLabelTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emailLabelTxt"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ageLabelTxt"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/countryLabelTxt"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/emailLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue"
        app:layout_constraintTop_toTopOf="@+id/emailLabel" />

    <TextView
        android:id="@+id/ageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/ageLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue"
        app:layout_constraintTop_toTopOf="@+id/ageLabel" />

    <TextView
        android:id="@+id/countryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/countryLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue"
        app:layout_constraintTop_toTopOf="@+id/countryLabel" />

    <TextView
        android:id="@+id/dobLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DOBLabelTxt"
        app:layout_constraintStart_toStartOf="@+id/countryLabel"
        app:layout_constraintTop_toBottomOf="@+id/countryLabel" />

    <TextView
        android:id="@+id/dobValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/dobLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue"
        app:layout_constraintTop_toTopOf="@+id/dobLabel" />

    <!-- <TextView
        android:id="@+id/dobValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"\ />-->






</androidx.constraintlayout.widget.ConstraintLayout>